--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background-image: url("./img/bg.png");
+  background-image: url("./img/logo_dream.jpg");
 }
 
 .game-container {
